updated to newest vmf version (currently 0.2.6.4)