@@ -19,7 +19,15 @@ plugins {
 }
 
 wrapper {
-    gradleVersion = '5.1'
+    gradleVersion = '5.4'
+
+    // def jvmOpts = "-Xmx2048m -XX:+CMSClassUnloadingEnabled"
+    // inputs.property("jvmOpts", jvmOpts)
+    // doLast {
+    //     def optsEnvVar = "DEFAULT_JVM_OPTS"
+    //     scriptFile.write scriptFile.text.replace("$optsEnvVar=\"\"", "$optsEnvVar=\"$jvmOpts\"")
+    //     batchScript.write batchScript.text.replace("set $optsEnvVar=", "set $optsEnvVar=$jvmOpts")
+    // }
 }
 
 apply plugin: 'java'
@@ -57,6 +65,14 @@ dependencies {
 // fix current working directory on android
 test {
     forkEvery = 1; workingDir = { projectDir }
+
+    // set heap size for the test JVM(s)
+    minHeapSize = "512m"
+    maxHeapSize = "2048m"
+
+    // set JVM arguments for the test JVM(s)
+    //jvmArgs '-XX:MaxPermSize=256m'
+
 }
 
 // -------------------------------
